# extract-text-app

./: .gitattributes  Dockerfile  README.md  houdini.config.js  package-lock.json  package.json  sample.env  schema.graphql  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json  docker-compose.yaml
hasura/: config.yaml
hasura/metadata/databases/db/tables/: public_anchors.yaml  public_selectors.yaml  tables.yaml
hasura/migrations/db/1722436146775_init/: up.sql
python/: .gitignore  azure extraction.py  donut extraction.py  pyproject.toml  test2.py
python/.devcontainer/: devcontainer.json
python/static/: script.js  styles.css
python/templates/: index.html
src/: app.css  client.ts
src/graphql/: DeleteAnchor.graphql  DeleteSelector.graphql  GetAnchors.graphql  GetSelectors.graphql  InsertAnchor.graphql  InsertSelector.graphql  UpdateAnchor.graphql  UpdateSelector.graphql
src/routes/: +layout.svelte  +page.svelte  Anchor.svelte  Container.svelte  ErrorModal.svelte  Files.svelte  Selector.svelte  Selectors.svelte  Viewer.svelte  stores.ts  utils.ts
src/routes/api/convert-pdf/: +server.ts
src/routes/api/extract-text/: +server.ts
